[package]
name = "rmk-keychron-q6-max-ansi-encoder"
version = "0.2.0"
authors = ["Alex Page <alex@anpage.me>"]
description = "RMK-based firmware for the ANSI-layout Keychron Q6 Max with encoder (knob)"
readme = "README.md"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt"] }
embassy-stm32 = { version = "0.4", features = [
    "stm32f401rc",
    "defmt",
    "memory-x",
    "time-driver-any",
] }
embassy-executor = { version = "0.9", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
static_cell = "2"
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }
rmk = { git = "https://github.com/HaoboGu/rmk", rev = "8b7ce24a974cc50246d608cdc79c8881a7301720", default-features = false, features = [
    "host",
    "vial",
    "vial_lock",
    "storage",
    "defmt",
] }
embedded-storage = "0.3.1"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-keychron-q6-max-ansi-encoder"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
